Fixed overflow and height issues for mobile responsove design.

--- a/style.css
+++ b/style.css
@@ -676,4 +676,7 @@ body {
         margin-top: 10px;
     }
 
+    .addedTasks .taskarea {
+        width: 60%;
+    }
 }
